--- a/src/imu_interpreter/package.xml
+++ b/src/imu_interpreter/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>brink</name>
+  <name>imu_interpreter</name>
   <version>0.0.0</version>
   <description>The IMU interpreter package</description>
 
